--- a/src/styles/FooterStyles/_footer.scss
+++ b/src/styles/FooterStyles/_footer.scss
@@ -34,7 +34,7 @@
 
   p {
     margin: 0;
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1250px) {
       display: none;
     }
     span {
